Trying to fix tooltip continuously appearing on mobile

--- a/css/nightmode.css
+++ b/css/nightmode.css
@@ -14,3 +14,8 @@
 .bookmarked_ayah {
     color: red;
 }
+
+#translationContent {
+    background-color: #333;
+    color: ivory;
+}
